...
                Image(systemName: "apple.logo")
                    .resizable()
                    .aspectRatio(contentMode: .fit)
                    .frame(width: 24, height: 24)
                    .foregroundColor(.pokit(.icon(.inverseWh)))
                
                Text("Apple로 계속하기")
                    .pokitFont(.l1(.r))
                    .foregroundStyle(.pokit(.text(.inverseWh)))
                
                Spacer()
            }
            
...
                Spacer()
                
                Image(.icon(.google))
                    .resizable()
                    .frame(width: 24, height: 24)
                
                Text("Google로 계속하기")
                    .pokitFont(.l1(.r))
                    .foregroundStyle(.pokit(.text(.primary)))
                
                Spacer()
            }
            
...
