...
                            PokitLinkPopup(type: $store.linkPopup)
                                .onAction { send(.링크팝업_버튼_눌렀을때, animation: .pokitSpring) }
                        }
                    }
                }
            }
            .accessibilityIdentifier("main-tab-root")
            .task { await send(.onAppear).finish() }
            .onOpenURL { send(.onOpenURL(url: $0)) }
        }
    }
}
//MARK: - Configure View
...
                item: $store.scope(
                    state: \.contentDetail,
                    action: \.contentDetail
                )
            ) { store in
                ContentDetailView(store: store)
                    .accessibilityIdentifier("content-detail-sheet")
            }
            .sheet(isPresented: $store.isErrorSheetPresented) {
                PokitAlert(
                    store.error?.title ?? "에러",
                    message: store.error?.message ?? "메세지",
                    confirmText: "확인",
...
