...
        PokitHeader(title: isSticky ? store.category.categoryName : "") {
            PokitHeaderItems(placement: .leading) {
                PokitToolbarButton(
                    .icon(.arrowLeft),
                    action: { send(.dismiss) }
                )
                .accessibilityIdentifier("category-detail-back")
            }
            
            if !store.isFavoriteCategory && store.type == .참여 {
                PokitHeaderItems(placement: .trailing) {
                    if store.isSharedCategory {
                        participantsView
...
